# BZRPlayer

./: .gitattributes  .gitignore  BZRPlayer.pro  CMakeLists.txt  Makefile.Debug  Makefile.Release  README.md  generate_release_zip.cmake  utils.cmake
src/: BZRPlayer.exe.manifest  BZRPlayer.exe.manifest.in  BZRPlayer.pro  BaseRow.h  CMakeLists.txt  QTableWidgetCustom.cpp  QTableWidgetCustom.h  about.cpp  about.h  about.ui  album.h  buttonoscilloscope.cpp  dialognewworkspace.h  dialognewworkspace.ui  filedownloader.cpp  fileinfoparser.cpp  fileinfoparser.h  info.h  main.cpp  mainwindow.cpp  mainwindow.ui  myitemdelegate.cpp  myitemdelegate.h  noPageSlider.cpp  playlist.cpp  playlistitem.cpp  playlistmodel.h  resource.qrc  settingswindow.cpp  settingswindow.h  settingswindow.ui  soundmanager.cpp  version.h  version.h.in
src/app/: BZRPlayer.VisualElementsManifest.xml  BZRPlayer.exe.manifest.in  BZRPlayer.rc  BaseRow.cpp  BaseRow.h  CMakeLists.txt  DiscordManager.cpp  DiscordManager.h  DraggableTableView.cpp  DraggableTableView.h  QTableWidgetCustom.cpp  QTableWidgetCustom.h  about.cpp  about.h  about.ui  album.cpp  album.h  albumgrid.cpp  albumgrid.h  buttonoscilloscope.cpp  buttonoscilloscope.h  channels.cpp  channels.h  dialogdeleteworkspace.cpp  dialogdeleteworkspace.h  dialogdeleteworkspace.ui  dialognewworkspace.cpp  dialognewworkspace.h  dialognewworkspace.ui  filedownloader.cpp  filedownloader.h  fileinfoparser.cpp  fileinfoparser.h  info.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myitemdelegate.cpp  myitemdelegate.h  (+24 more)
src/app/patternview/: AHXPatternView.cpp  AHXPatternView.h  AbstractPatternView.cpp  AbstractPatternView.h  ChipTrackerPatternView.cpp  ChipTrackerPatternView.h  Composer669PatternView.cpp  Composer669PatternView.h  DigiBooster17PatternView.cpp  DigiBooster17PatternView.h  DigiBoosterProPatternView.cpp  DigiBoosterProPatternView.h  FastTracker1PatternView.cpp  FastTracker1PatternView.h  FastTracker24ChanPatternView.cpp  FastTracker24ChanPatternView.h  FastTracker26ChanPatternView.cpp  FastTracker26ChanPatternView.h  FastTracker2PatternView.cpp  FastTracker2PatternView.h  GameMusicCreatorPatternView.cpp  GameMusicCreatorPatternView.h  GenericPatternView.cpp  GenericPatternView.h  HivelyTrackerPatternView.cpp  HivelyTrackerPatternView.h  IceTrackerPatternView.cpp  IceTrackerPatternView.h  ImpulseTrackerPatternView.cpp  ImpulseTrackerPatternView.h  MEDPatternView.cpp  MEDPatternView.h  MultiTrackerPatternView.cpp  MultiTrackerPatternView.h  NoiseTrackerPatternView.cpp  NoiseTrackerPatternView.h  OctaMED44ChanPatternView.cpp  OctaMED44ChanPatternView.h  OctaMED54ChanPatternView.cpp  OctaMED54ChanPatternView.h  (+28 more)
src/app/visualizers/: Point2D.h  Point3D.h  PrinterEffect.cpp  PrinterEffect.h  RasterBarsEffect.cpp  RasterBarsEffect.h  RotatingModel3D.cpp  RotatingModel3D.h  RotatingObject.cpp  RotatingObject.h  ScrollerEffect.cpp  ScrollerEffect.h  StarField.cpp  StarField.h  VuMetersEffect.cpp  VuMetersEffect.h  effect.cpp  effect.h  parallax.cpp  parallax.h  scroller.cpp  scroller.h  tracker.cpp  tracker.h  trackerfullscreen.cpp  trackerfullscreen.h  visualizerfullscreen.cpp  visualizerfullscreen.h
src/include/: info.h
src/inst/: bzr2-wine_setup.sh  bzr2_setup.sh  supported_mime_types  x-bzr-player.xml  x-bzr-player_todo.xml
src/inst/nsis/: .gitignore  bzr2_setup.exe_latest  bzr2_setup.nsi  filetype_associations_component_util_generator.sh
src/inst/pkgbuild/: PKGBUILD
src/inst/test/: test.sh  test_samples.sh
src/patternview/: AHXPatternView.h  AbstractPatternView.cpp  AbstractPatternView.h  ChipTrackerPatternView.h  Composer669PatternView.cpp  Composer669PatternView.h  DigiBooster17PatternView.cpp  DigiBoosterProPatternView.cpp  FastTracker26ChanPatternView.cpp  FastTracker2PatternView.cpp  GameMusicCreatorPatternView.cpp  MEDPatternView.h  NoiseTrackerPatternView.cpp  OctaMED44ChanPatternView.cpp  OctaMED54ChanPatternView.cpp  OctaMED5ChanPatternView.cpp  OctaMEDPatternView.cpp  OctaMEDSoundstudioPatternView.cpp  OctaMEDSoundstudioPatternView.h  ProTracker1PatternView.h  ProTracker36PatternView.cpp  ScreamTracker3PatternView.cpp  SoundFXPatternView.cpp  SoundFXPatternView.h  UltimateSoundTrackerPatternView.h  UltraTrackerPatternView.cpp  UltraTrackerPatternView.h  bitmapfont.cpp  bitmapfont.h  fil.txt
src/plugins/FMOD_AHX_plugin/: CMakeLists.txt  FMOD_AHX_plugin.files  FMOD_AHX_plugin.includes  makefile
src/plugins/FMOD_ASAP_plugin/: CMakeLists.txt  FMOD_ASAP_plugin.creator.user.2.5pre1  FMOD_ASAP_plugin.creator.user.2.6pre1  FMOD_ASAP_plugin.creator.user.4.10-pre1  FMOD_ASAP_plugin.creator.user.8c144d4.4.8-pre1  FMOD_ASAP_plugin.files  FMOD_ASAP_plugin.includes  makefile
src/plugins/FMOD_FC_plugin/: CMakeLists.txt  FMOD_FC_plugin.creator.user.2.5pre1  FMOD_FC_plugin.creator.user.2.6pre1  FMOD_FC_plugin.creator.user.4.10-pre1  FMOD_FC_plugin.creator.user.8c144d4.4.8-pre1  FMOD_FC_plugin.files  FMOD_FC_plugin.includes  makefile
src/plugins/FMOD_Flod_plugin/: CMakeLists.txt  FMOD_Flod_plugin.creator.user.2.6pre1  FMOD_Flod_plugin.creator.user.4.10-pre1  FMOD_Flod_plugin.creator.user.8c144d4.4.8-pre1  FMOD_Flod_plugin.files  FMOD_Flod_plugin.includes  makefile
src/plugins/FMOD_Gamemusic_plugin/: CMakeLists.txt  FMOD_Gamemusic_plugin.creator.user.1.3  FMOD_Gamemusic_plugin.creator.user.2.6pre1  FMOD_Gamemusic_plugin.creator.user.4.10-pre1  FMOD_Gamemusic_plugin.creator.user.8c144d4.4.8-pre1  FMOD_Gamemusic_plugin.files  FMOD_Gamemusic_plugin.includes  makefile
src/plugins/FMOD_Highly_Experimental_plugin/: CMakeLists.txt  FMOD_Highly_Experimental_plugin.files  FMOD_Highly_Experimental_plugin.includes  makefile
src/plugins/FMOD_Highly_Quixotic_plugin/: CMakeLists.txt  FMOD_Highly_Quixotic_plugin.files  makefile
src/plugins/FMOD_Highly_Theoretical_plugin/: CMakeLists.txt  makefile  (+2 more)
src/static/: BZRPlayer.VisualElementsManifest.xml
src/visualizers/: parallax.cpp  parallax.h  scroller.cpp  scroller.h  tracker.cpp  tracker.h  trackerfullscreen.cpp  trackerfullscreen.h  visualizerfullscreen.cpp  visualizerfullscreen.h
(+4631 files in other folders)
